--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,40 @@
 *{
-margin: 0;
-padding:0;
-border:0;
-font-size:inherit;
-font-weight:inherit;
-font-family:inherit;
-text-decoration: inherit;
-line-height: inherit;
-color:inherit;
+  margin: 0;
+  padding:0;
+  border:0;
+  font-size:inherit;
+  font-weight:inherit;
+  font-family:inherit;
+  text-decoration: inherit;
+  line-height: inherit;
+  color:inherit;
 }
+html, body{
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 20px;
+  line-height: 30px
+  color:#444
+  text-shadow: 1px 1px 1px #fff;
+}
+body{
+  text-align:center
+}
+h1{
+  font-size:
+  line-height:normal;
+  font-weight:
+}
+img{
+  height: 300px;
+  width: 300px
+  
+}
+
+
+
+
+
+/*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
+/*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
+/*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
+/*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
