--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,28 +13,66 @@ html, body{
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 20px;
   line-height: 30px
-  color:#444
+  color:#444;
   text-shadow: 1px 1px 1px #fff;
 }
 body{
-  text-align:center
+  background-image: url(background.png);
+  text-align:center;
 }
 h1{
-  font-size:
+  font-size:120px;
   line-height:normal;
-  font-weight:
-}
-img{
-  height: 750px;
-  width: 1050px
+font-family: 'Great Vibes', cursive;
+color:white;
 
 }
+h2{
+  font-size:100px;
+  line-height:normal;
+font-family: 'Great Vibes', cursive;
+color: white;
+padding-top: 20px;
+}
+.hero{
+  display:flex;
+  flex-direction:column;
+  align-content:center;
+  height:671 auto;
+  width:581 auto;;
+}
+.hero img{
+  width:100%;
+  height:100%;
+}
+.techlife {
+  transition:transform 7s;
+  height:50%;
+  width:50%;
+  background-image:url(TillTheNextLifeSky.png);
+  background-size:contain;
+  margin-left: auto;
+  margin-right:auto;
+}
+.techlife:hover{
+transform: rotate(360deg) skew(359deg) translate(-1px);
+box-shadow:
+}
+.techlife:img{
+  transition:opacity 5s;
+}
+.headshot:hover img{
+opacity 0;
+}
 
-
-
-
-
+/*@font-face { font-family: FONTS; s rc: url('FONTS.FONTS');/*
 /*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
 /*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
 /*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
-/*@font-face { font-family: FONTS; src: url('FONTS.FONTS');/*
+transition:transform 3s;
+.techlife:hover{
+transform: rotate(0deg) scale(0.782) skew(1deg) translate(-1px);
+-webkit-transform: rotate(0deg) scale(0.782) skew(1deg) translate(-1px);
+-moz-transform: rotate(0deg) scale(0.782) skew(1deg) translate(-1px);
+-o-transform: rotate(0deg) scale(0.782) skew(1deg) translate(-1px);
+-ms-transform: rotate(0deg) scale(0.782) skew(1deg) translate(-1px);
