--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,18 +23,18 @@ body{
 h1{
   font-size:120px;
   line-height:normal;
-font-family: 'Great Vibes', cursive;
-color:white;
-
+  font-family: 'Great Vibes', cursive;
+  color:white;
 }
+
 h2{
   font-size:100px;
   line-height:normal;
-font-family: 'Great Vibes', cursive;
-color: white;
-padding-top: 20px;
+  font-family: 'Great Vibes', cursive;
+  color: white;
+  padding-top: 20px;
 }
-.hero{
+/*.hero{
   display:flex;
   flex-direction:column;
   align-content:center;
@@ -42,15 +42,18 @@ padding-top: 20px;
   width:581 auto;;
 }
 .hero img{
+  outline: 10px solid black;
   width:100%;
   height:100%;
-}
+}*/
 .techlife {
+  outline: 10px solid red;
   transition:transform 7s;
-  height:50%;
-  width:50%;
-  background-image:url(TillTheNextLifeSky.png);
-  background-size:contain;
+  height:25%;
+  width:25%;
+  /*background-image: url("TillTheNextLifeSky.png");
+  background-size: cover;
+  background-position: center;*/
   margin-left: auto;
   margin-right:auto;
 }
@@ -58,9 +61,16 @@ padding-top: 20px;
 transform: rotate(360deg) skew(359deg) translate(-1px);
 box-shadow:
 }
-.techlife:img{
+.techlife img{
+  width: 100%;
+  height: 100%;
   transition:opacity 5s;
 }
+
+#img2 {
+  visibility: hidden;
+}
+
 .headshot:hover img{
 opacity 0;
 }
