--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ body{
   text-align:center;
   max-width: 500px;
 }
-#techlife {
+.techlife {
   position:relative;
   max-height: height:281px;
   max-width: width:450px;
@@ -31,7 +31,7 @@ body{
 
 }
 
-#techlife img {
+.techlife img {
   position:absolute;
   left:0;
   -webkit-transition: opacity 1s ease-in-out;
@@ -40,7 +40,7 @@ body{
   transition: opacity 1s ease-in-out;
 }
 
-#techlife img.top:hover {
+.techlife img.top:hover {
   opacity:0;
 }
 #text{
